test order and ui improvment

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -85,7 +85,8 @@
     "addError": "Artikel konnte nicht zum Inventar hinzugefügt werden. Bitte versuchen Sie es erneut."
   },
   "categories": {
-    "foodbeverage": "Lebensmittel & Getränke"
+    "foodbeverage": "Lebensmittel & Getränke",
+    "food&beverage": "Lebensmittel & Getränke"
   },
   "items": {
     "title": "Artikel",
