--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -86,7 +86,8 @@
     "addError": "Failed to add item to inventory. Please try again."
   },
   "categories": {
-    "foodbeverage": "Food & Beverage"
+    "foodbeverage": "Food & Beverage",
+    "food&beverage": "Food & Beverage"
   },
   "items": {
     "title": "Items",
