Fix item ordering persistence and mobile drag issues
- Add TouchSensor for better mobile drag support with delay and tolerance
- Fix filtering logic to preserve display_order sorting after search/filter
- Improve mobile drag handle with better visual feedback and touch-manipulation
- Add missing Croatian translations for categories
- Optimize drag sensors order and configuration for mobile devices

--- a/src/i18n/locales/hr.json
+++ b/src/i18n/locales/hr.json
@@ -89,7 +89,12 @@
   },
   "categories": {
     "foodbeverage": "Hrana i piće",
-    "food&beverage": "Hrana i piće"
+    "food&beverage": "Hrana i piće",
+    "cleaning": "Čišćenje",
+    "supplies": "Potrepštine",
+    "toiletries": "Toaletni artikli",
+    "equipment": "Oprema",
+    "office": "Ured"
   },
   "items": {
     "title": "Artikli",
