feat: add Orders page to inventory module with Croatian receipt printing
- Create new Orders tab in main navigation (Locations → Items → Orders)
- Reuse existing inventory components and database queries
- Support Food & Beverage items with real-time stock levels
- Include FIFO inventory deduction (oldest expiration first)
- Generate authentic Croatian fiscal receipts matching Hotel Poreč format
- Add search/filter functionality for items
- Support cash and card payments
- Multi-language navigation support (EN/HR/DE: Orders/Narudžbe/Bestellungen)
- Integrate with existing Supabase database structure
- Real-time inventory updates after order processing

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -3,6 +3,7 @@
     "dashboard": "Dashboard",
     "locations": "Standorte",
     "items": "Artikel",
+    "orders": "Bestellungen",
     "globalView": "Globale Ansicht",
     "settings": "Einstellungen",
     "moduleSelector": "Hotel Module",
