--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -3,6 +3,7 @@
     "dashboard": "Dashboard",
     "locations": "Locations",
     "items": "Items",
+    "orders": "Orders",
     "globalView": "Global View",
     "settings": "Settings",
     "moduleSelector": "Hotel Modules",
