--- a/src/i18n/locales/hr.json
+++ b/src/i18n/locales/hr.json
@@ -3,6 +3,7 @@
     "dashboard": "Kontrolna ploča",
     "locations": "Lokacije",
     "items": "Artikli",
+    "orders": "Narudžbe",
     "globalView": "Globalni pregled",
     "settings": "Postavke",
     "moduleSelector": "Hotel moduli",
